Better nullability for Statements